# write

./: .editorconfig  .gitignore  README.md  meson.build  vala-lint.conf
data/: write.desktop  write.metainfo.xml
src/main/vala/: Application.vala  DocumentStack.vala  DocumentView.vala  MainWindow.vala
